feat(mainnav): open up customisation (#192)

--- a/root.css
+++ b/root.css
@@ -1,74 +1,80 @@
 :root,
 [data-bs-theme="light"] {
-  --sgds-blue: #0950df;
+  --sgds-blue: #216bff;
   --sgds-indigo: #6610f2;
-  --sgds-purple: #5942db;
+  --sgds-purple: #7562e2;
   --sgds-pink: #d63384;
-  --sgds-red: #b6220d;
+  --sgds-red: #dd361c;
   --sgds-orange: #fd7e14;
-  --sgds-yellow: #88500d;
-  --sgds-green: #066e0e;
+  --sgds-yellow: #a5681f;
+  --sgds-green: #088912;
   --sgds-teal: #20c997;
-  --sgds-cyan: #0a6679;
+  --sgds-cyan: #228190;
   --sgds-black: #000;
   --sgds-white: #fff;
-  --sgds-gray: #5d5d5d;
+  --sgds-gray: #595959;
   --sgds-gray-dark: #252525;
-  --sgds-gray-100: #f7f7f7;
-  --sgds-gray-200: #d6d6d6;
-  --sgds-gray-300: #b1b1b1;
-  --sgds-gray-400: #909090;
+  --sgds-gray-100: #eaeaea;
+  --sgds-gray-200: #d2d2d2;
+  --sgds-gray-300: #b2b2b2;
+  --sgds-gray-400: #939393;
   --sgds-gray-500: #757575;
-  --sgds-gray-600: #5d5d5d;
-  --sgds-gray-700: #3f3f3f;
+  --sgds-gray-600: #595959;
+  --sgds-gray-700: #3e3e3e;
   --sgds-gray-800: #252525;
-  --sgds-gray-900: #111;
-  --sgds-primary: #5942db;
-  --sgds-secondary: #0a6679;
-  --sgds-success: #066e0e;
-  --sgds-info: #0950df;
-  --sgds-warning: #88500d;
-  --sgds-danger: #b6220d;
-  --sgds-light: #b1b1b1;
+  --sgds-gray-900: #0e0e0e;
+  --sgds-primary: #7562e2;
+  --sgds-secondary: #228190;
+  --sgds-success: #088912;
+  --sgds-info: #216bff;
+  --sgds-warning: #a5681f;
+  --sgds-danger: #dd361c;
+  --sgds-light: #b2b2b2;
   --sgds-dark: #252525;
-  --sgds-primary-rgb: 89, 66, 219;
-  --sgds-secondary-rgb: 10, 102, 121;
-  --sgds-success-rgb: 6, 110, 14;
-  --sgds-info-rgb: 9, 80, 223;
-  --sgds-warning-rgb: 136, 80, 13;
-  --sgds-danger-rgb: 182, 34, 13;
-  --sgds-light-rgb: 177, 177, 177;
+  --sgds-primary-rgb: 117, 98, 226;
+  --sgds-secondary-rgb: 34, 129, 144;
+  --sgds-success-rgb: 8, 137, 18;
+  --sgds-info-rgb: 33, 107, 255;
+  --sgds-warning-rgb: 165, 104, 31;
+  --sgds-danger-rgb: 221, 54, 28;
+  --sgds-light-rgb: 178, 178, 178;
   --sgds-dark-rgb: 37, 37, 37;
-  --sgds-primary-text-emphasis: #5942db;
-  --sgds-secondary-text-emphasis: #0a6679;
-  --sgds-success-text-emphasis: #066e0e;
-  --sgds-info-text-emphasis: #0950df;
-  --sgds-warning-text-emphasis: #88500d;
-  --sgds-danger-text-emphasis: #b6220d;
-  --sgds-light-text-emphasis: #111;
-  --sgds-dark-text-emphasis: #111;
-  --sgds-primary-bg-subtle: #f8f7fd;
-  --sgds-secondary-bg-subtle: #edfbfb;
-  --sgds-success-bg-subtle: #effaf0;
-  --sgds-info-bg-subtle: #f4f7ff;
-  --sgds-warning-bg-subtle: #faf7f3;
-  --sgds-danger-bg-subtle: #fff5f2;
-  --sgds-light-bg-subtle: #f7f7f7;
-  --sgds-dark-bg-subtle: #b1b1b1;
-  --sgds-primary-border-subtle: #5942db;
-  --sgds-secondary-border-subtle: #0a6679;
-  --sgds-success-border-subtle: #066e0e;
-  --sgds-info-border-subtle: #0950df;
-  --sgds-warning-border-subtle: #88500d;
-  --sgds-danger-border-subtle: #b6220d;
-  --sgds-light-border-subtle: #909090;
-  --sgds-dark-border-subtle: #111;
+  --sgds-primary-text-emphasis: #5a42c0;
+  --sgds-secondary-text-emphasis: #006472;
+  --sgds-success-text-emphasis: #006b00;
+  --sgds-info-text-emphasis: #0049dc;
+  --sgds-warning-text-emphasis: #864b00;
+  --sgds-danger-text-emphasis: #b90000;
+  --sgds-light-text-emphasis: #252525;
+  --sgds-dark-text-emphasis: #fff;
+  --sgds-primary-bg-subtle: #eae8ff;
+  --sgds-secondary-bg-subtle: #c8f1f9;
+  --sgds-success-bg-subtle: #c2f5bf;
+  --sgds-info-bg-subtle: #c5f0ff;
+  --sgds-warning-bg-subtle: #ffe6c6;
+  --sgds-danger-bg-subtle: #ffdac8;
+  --sgds-light-bg-subtle: #eaeaea;
+  --sgds-dark-bg-subtle: #252525;
+  --sgds-primary-border-subtle: #9288f0;
+  --sgds-secondary-border-subtle: #5b9da9;
+  --sgds-success-border-subtle: #53a450;
+  --sgds-info-border-subtle: #5592ff;
+  --sgds-warning-border-subtle: #bc8a57;
+  --sgds-danger-border-subtle: #f06e57;
+  --sgds-light-border-subtle: #939393;
+  --sgds-dark-border-subtle: #939393;
   --sgds-white-rgb: 255, 255, 255;
   --sgds-black-rgb: 0, 0, 0;
-  --sgds-font-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --sgds-gradient: linear-gradient(180deg, hsla(0, 0%, 100%, 0.15), hsla(0, 0%, 100%, 0));
+  --sgds-font-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --sgds-gradient: linear-gradient(
+    180deg,
+    hsla(0, 0%, 100%, 0.15),
+    hsla(0, 0%, 100%, 0)
+  );
   --sgds-body-font-family: var(--sgds-font-sans-serif);
   --sgds-body-font-size: 1rem;
   --sgds-body-font-weight: 400;
@@ -81,24 +87,24 @@
   --sgds-emphasis-color-rgb: 0, 0, 0;
   --sgds-secondary-color: rgba(37, 37, 37, 0.75);
   --sgds-secondary-color-rgb: 37, 37, 37;
-  --sgds-secondary-bg: #d6d6d6;
-  --sgds-secondary-bg-rgb: 214, 214, 214;
+  --sgds-secondary-bg: #d2d2d2;
+  --sgds-secondary-bg-rgb: 210, 210, 210;
   --sgds-tertiary-color: rgba(37, 37, 37, 0.5);
   --sgds-tertiary-color-rgb: 37, 37, 37;
-  --sgds-tertiary-bg: #f7f7f7;
-  --sgds-tertiary-bg-rgb: 247, 247, 247;
+  --sgds-tertiary-bg: #eaeaea;
+  --sgds-tertiary-bg-rgb: 234, 234, 234;
   --sgds-heading-color: ;
-  --sgds-link-color: #0950df;
-  --sgds-link-color-rgb: 9, 80, 223;
+  --sgds-link-color: #0049dc;
+  --sgds-link-color-rgb: 0, 73, 220;
   --sgds-link-decoration: underline;
-  --sgds-link-hover-color: #0740b2;
-  --sgds-link-hover-color-rgb: 7, 64, 178;
+  --sgds-link-hover-color: #003ab0;
+  --sgds-link-hover-color-rgb: 0, 58, 176;
   --sgds-code-color: #d63384;
   --sgds-highlight-color: #252525;
-  --sgds-highlight-bg: #faf7f3;
+  --sgds-highlight-bg: #ffe6c6;
   --sgds-border-width: 1px;
   --sgds-border-style: solid;
-  --sgds-border-color: #909090;
+  --sgds-border-color: #939393;
   --sgds-border-color-translucent: rgba(0, 0, 0, 0.175);
   --sgds-border-radius: 0.3125rem;
   --sgds-border-radius-sm: 0.2rem;
@@ -113,223 +119,134 @@
   --sgds-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --sgds-focus-ring-width: 0.25rem;
   --sgds-focus-ring-opacity: 0.25;
-  --sgds-focus-ring-color: rgba(89, 66, 219, 0.25);
-  --sgds-form-valid-color: #066e0e;
-  --sgds-form-valid-border-color: #066e0e;
-  --sgds-form-invalid-color: #b6220d;
-  --sgds-form-invalid-border-color: #b6220d;
+  --sgds-focus-ring-color: rgba(117, 98, 226, 0.25);
+  --sgds-form-valid-color: #088912;
+  --sgds-form-valid-border-color: #088912;
+  --sgds-form-invalid-color: #dd361c;
+  --sgds-form-invalid-border-color: #dd361c;
 }
 [data-bs-theme="dark"] {
-  --sgds-body-color: #d6d6d6;
-  --sgds-body-color-rgb: 214, 214, 214;
-  --sgds-body-bg: #111;
-  --sgds-body-bg-rgb: 17, 17, 17;
+  --sgds-body-color: #d2d2d2;
+  --sgds-body-color-rgb: 210, 210, 210;
+  --sgds-body-bg: #0e0e0e;
+  --sgds-body-bg-rgb: 14, 14, 14;
   --sgds-emphasis-color: #fff;
   --sgds-emphasis-color-rgb: 255, 255, 255;
-  --sgds-secondary-color: hsla(0, 0%, 84%, 0.75);
-  --sgds-secondary-color-rgb: 214, 214, 214;
+  --sgds-secondary-color: hsla(0, 0%, 82%, 0.75);
+  --sgds-secondary-color-rgb: 210, 210, 210;
   --sgds-secondary-bg: #252525;
   --sgds-secondary-bg-rgb: 37, 37, 37;
-  --sgds-tertiary-color: hsla(0, 0%, 84%, 0.5);
-  --sgds-tertiary-color-rgb: 214, 214, 214;
-  --sgds-tertiary-bg: #1b1b1b;
-  --sgds-tertiary-bg-rgb: 27, 27, 27;
-  --sgds-primary-text-emphasis: #b3a8ef;
-  --sgds-secondary-text-emphasis: #5fc0c5;
-  --sgds-success-text-emphasis: #52c85b;
-  --sgds-info-text-emphasis: #8ab1ff;
-  --sgds-warning-text-emphasis: #cdac83;
-  --sgds-danger-text-emphasis: #fd957b;
-  --sgds-light-text-emphasis: #f7f7f7;
-  --sgds-dark-text-emphasis: #b1b1b1;
-  --sgds-primary-bg-subtle: #120d2b;
-  --sgds-secondary-bg-subtle: #021418;
-  --sgds-success-bg-subtle: #011603;
-  --sgds-info-bg-subtle: #02102e;
-  --sgds-warning-bg-subtle: #1a1002;
-  --sgds-danger-bg-subtle: #270703;
-  --sgds-light-bg-subtle: #d6d6d6;
-  --sgds-dark-bg-subtle: #252525;
-  --sgds-primary-border-subtle: #b3a8ef;
-  --sgds-secondary-border-subtle: #5fc0c5;
-  --sgds-success-border-subtle: #52c85b;
-  --sgds-info-border-subtle: #8ab1ff;
-  --sgds-warning-border-subtle: #cdac83;
-  --sgds-danger-border-subtle: #fd957b;
-  --sgds-light-border-subtle: #b1b1b1;
-  --sgds-dark-border-subtle: #252525;
+  --sgds-tertiary-color: hsla(0, 0%, 82%, 0.5);
+  --sgds-tertiary-color-rgb: 210, 210, 210;
+  --sgds-tertiary-bg: #1a1a1a;
+  --sgds-tertiary-bg-rgb: 26, 26, 26;
+  --sgds-primary-text-emphasis: #d1ceff;
+  --sgds-secondary-text-emphasis: #abd9e2;
+  --sgds-success-text-emphasis: #a5dfa1;
+  --sgds-info-text-emphasis: #a7d6ff;
+  --sgds-warning-text-emphasis: #f3cda8;
+  --sgds-danger-text-emphasis: #ffbdaa;
+  --sgds-light-text-emphasis: #fff;
+  --sgds-dark-text-emphasis: #d2d2d2;
+  --sgds-primary-bg-subtle: #2d007e;
+  --sgds-secondary-bg-subtle: #002c3a;
+  --sgds-success-bg-subtle: #003100;
+  --sgds-info-bg-subtle: #000097;
+  --sgds-warning-bg-subtle: #491200;
+  --sgds-danger-bg-subtle: #720000;
+  --sgds-light-bg-subtle: #595959;
+  --sgds-dark-bg-subtle: #0e0e0e;
+  --sgds-primary-border-subtle: #7562e2;
+  --sgds-secondary-border-subtle: #228190;
+  --sgds-success-border-subtle: #088912;
+  --sgds-info-border-subtle: #216bff;
+  --sgds-warning-border-subtle: #a5681f;
+  --sgds-danger-border-subtle: #dd361c;
+  --sgds-light-border-subtle: #757575;
+  --sgds-dark-border-subtle: #757575;
   --sgds-heading-color: inherit;
-  --sgds-link-color: #538cff;
-  --sgds-link-hover-color: #8ab1ff;
-  --sgds-link-color-rgb: 83, 140, 255;
-  --sgds-link-hover-color-rgb: 138, 177, 255;
+  --sgds-link-color: #5592ff;
+  --sgds-link-hover-color: #7fb5ff;
+  --sgds-link-color-rgb: 85, 146, 255;
+  --sgds-link-hover-color-rgb: 127, 181, 255;
   --sgds-code-color: #e685b5;
-  --sgds-highlight-color: #d6d6d6;
-  --sgds-highlight-bg: #372005;
-  --sgds-border-color: #909090;
+  --sgds-highlight-color: #d2d2d2;
+  --sgds-highlight-bg: #491200;
+  --sgds-border-color: #757575;
   --sgds-border-color-translucent: hsla(0, 0%, 100%, 0.15);
-  --sgds-form-valid-color: #52c85b;
-  --sgds-form-valid-border-color: #52c85b;
-  --sgds-form-invalid-color: #fd957b;
-  --sgds-form-invalid-border-color: #fd957b;
+  --sgds-form-valid-color: #7ec17a;
+  --sgds-form-valid-border-color: #7ec17a;
+  --sgds-form-invalid-color: #ff9782;
+  --sgds-form-invalid-border-color: #ff9782;
 }
 :root {
-  --sgds-gray-100-rgb: 247, 247, 247;
-  --sgds-gray-200-rgb: 214, 214, 214;
-  --sgds-gray-300-rgb: 177, 177, 177;
-  --sgds-gray-400-rgb: 144, 144, 144;
-  --sgds-gray-500-rgb: 117, 117, 117;
-  --sgds-gray-600-rgb: 93, 93, 93;
-  --sgds-gray-700-rgb: 63, 63, 63;
-  --sgds-gray-800-rgb: 37, 37, 37;
-  --sgds-gray-900-rgb: 17, 17, 17;
-  --sgds-primary-100: #f8f7fd;
-  --sgds-primary-100-rgb: 248, 247, 253;
-  --sgds-primary-200: #d7d1f6;
-  --sgds-primary-200-rgb: 215, 209, 246;
-  --sgds-primary-300: #b3a8ef;
-  --sgds-primary-300-rgb: 179, 168, 239;
-  --sgds-primary-400: #9182e8;
-  --sgds-primary-400-rgb: 145, 130, 232;
+  --sgds-primary-100: #eae8ff;
+  --sgds-primary-200: #d1ceff;
+  --sgds-primary-300: #b1acff;
+  --sgds-primary-400: #9288f0;
   --sgds-primary-500: #7562e2;
-  --sgds-primary-500-rgb: 117, 98, 226;
-  --sgds-primary-600: #5942db;
-  --sgds-primary-600-rgb: 89, 66, 219;
-  --sgds-primary-700: #3d2d97;
-  --sgds-primary-700-rgb: 61, 45, 151;
-  --sgds-primary-800: #241b5a;
-  --sgds-primary-800-rgb: 36, 27, 90;
-  --sgds-primary-900: #120d2b;
-  --sgds-primary-900-rgb: 18, 13, 43;
-  --sgds-secondary-100: #edfbfb;
-  --sgds-secondary-100-rgb: 237, 251, 251;
-  --sgds-secondary-200: #85e6e6;
-  --sgds-secondary-200-rgb: 133, 230, 230;
-  --sgds-secondary-300: #5fc0c5;
-  --sgds-secondary-300-rgb: 95, 192, 197;
-  --sgds-secondary-400: #3d9da7;
-  --sgds-secondary-400-rgb: 61, 157, 167;
+  --sgds-primary-600: #5a42c0;
+  --sgds-primary-700: #42209f;
+  --sgds-primary-800: #2d007e;
+  --sgds-primary-900: #1c005e;
+  --sgds-secondary-100: #c8f1f9;
+  --sgds-secondary-200: #abd9e2;
+  --sgds-secondary-300: #85bbc5;
+  --sgds-secondary-400: #5b9da9;
   --sgds-secondary-500: #228190;
-  --sgds-secondary-500-rgb: 34, 129, 144;
-  --sgds-secondary-600: #0a6679;
-  --sgds-secondary-600-rgb: 10, 102, 121;
-  --sgds-secondary-700: #074753;
-  --sgds-secondary-700-rgb: 7, 71, 83;
-  --sgds-secondary-800: #042931;
-  --sgds-secondary-800-rgb: 4, 41, 49;
-  --sgds-secondary-900: #021418;
-  --sgds-secondary-900-rgb: 2, 20, 24;
-  --sgds-success-100: #effaf0;
-  --sgds-success-100-rgb: 239, 250, 240;
-  --sgds-success-200: #a8e4ad;
-  --sgds-success-200-rgb: 168, 228, 173;
-  --sgds-success-300: #52c85b;
-  --sgds-success-300-rgb: 82, 200, 91;
-  --sgds-success-400: #09a716;
-  --sgds-success-400-rgb: 9, 167, 22;
+  --sgds-secondary-600: #006472;
+  --sgds-secondary-700: #004755;
+  --sgds-secondary-800: #002c3a;
+  --sgds-secondary-900: #001321;
+  --sgds-success-100: #c2f5bf;
+  --sgds-success-200: #a5dfa1;
+  --sgds-success-300: #7ec17a;
+  --sgds-success-400: #53a450;
   --sgds-success-500: #088912;
-  --sgds-success-500-rgb: 8, 137, 18;
-  --sgds-success-600: #066e0e;
-  --sgds-success-600-rgb: 6, 110, 14;
-  --sgds-success-700: #044b0a;
-  --sgds-success-700-rgb: 4, 75, 10;
-  --sgds-success-800: #022c06;
-  --sgds-success-800-rgb: 2, 44, 6;
-  --sgds-success-900: #011603;
-  --sgds-success-900-rgb: 1, 22, 3;
-  --sgds-info-100: #f4f7ff;
-  --sgds-info-100-rgb: 244, 247, 255;
-  --sgds-info-200: #c3d7ff;
-  --sgds-info-200-rgb: 195, 215, 255;
-  --sgds-info-300: #8ab1ff;
-  --sgds-info-300-rgb: 138, 177, 255;
-  --sgds-info-400: #538cff;
-  --sgds-info-400-rgb: 83, 140, 255;
+  --sgds-success-600: #006b00;
+  --sgds-success-700: #004d00;
+  --sgds-success-800: #003100;
+  --sgds-success-900: #001600;
+  --sgds-info-100: #c5f0ff;
+  --sgds-info-200: #a7d6ff;
+  --sgds-info-300: #7fb5ff;
+  --sgds-info-400: #5592ff;
   --sgds-info-500: #216bff;
-  --sgds-info-500-rgb: 33, 107, 255;
-  --sgds-info-600: #0950df;
-  --sgds-info-600-rgb: 9, 80, 223;
-  --sgds-info-700: #06379a;
-  --sgds-info-700-rgb: 6, 55, 154;
-  --sgds-info-800: #04215c;
-  --sgds-info-800-rgb: 4, 33, 92;
-  --sgds-info-900: #02102e;
-  --sgds-info-900-rgb: 2, 16, 46;
-  --sgds-warning-100: #faf7f3;
-  --sgds-warning-100-rgb: 250, 247, 243;
-  --sgds-warning-200: #e5d3bd;
-  --sgds-warning-200-rgb: 229, 211, 189;
-  --sgds-warning-300: #cdac83;
-  --sgds-warning-300-rgb: 205, 172, 131;
-  --sgds-warning-400: #b7874c;
-  --sgds-warning-400-rgb: 183, 135, 76;
+  --sgds-info-600: #0049dc;
+  --sgds-info-700: #0022b9;
+  --sgds-info-800: #000097;
+  --sgds-info-900: #130075;
+  --sgds-warning-100: #ffe6c6;
+  --sgds-warning-200: #f3cda8;
+  --sgds-warning-300: #d7ab81;
+  --sgds-warning-400: #bc8a57;
   --sgds-warning-500: #a5681f;
-  --sgds-warning-500-rgb: 165, 104, 31;
-  --sgds-warning-600: #88500d;
-  --sgds-warning-600-rgb: 136, 80, 13;
-  --sgds-warning-700: #5d3709;
-  --sgds-warning-700-rgb: 93, 55, 9;
-  --sgds-warning-800: #372005;
-  --sgds-warning-800-rgb: 55, 32, 5;
-  --sgds-warning-900: #1a1002;
-  --sgds-warning-900-rgb: 26, 16, 2;
-  --sgds-danger-100: #fff5f2;
-  --sgds-danger-100-rgb: 255, 245, 242;
-  --sgds-danger-200: #fecabd;
-  --sgds-danger-200-rgb: 254, 202, 189;
-  --sgds-danger-300: #fd957b;
-  --sgds-danger-300-rgb: 253, 149, 123;
-  --sgds-danger-400: #ef6447;
-  --sgds-danger-400-rgb: 239, 100, 71;
+  --sgds-warning-600: #864b00;
+  --sgds-warning-700: #672f00;
+  --sgds-warning-800: #491200;
+  --sgds-warning-900: #2d0000;
+  --sgds-danger-100: #ffdac8;
+  --sgds-danger-200: #ffbdaa;
+  --sgds-danger-300: #ff9782;
+  --sgds-danger-400: #f06e57;
   --sgds-danger-500: #dd361c;
-  --sgds-danger-500-rgb: 221, 54, 28;
-  --sgds-danger-600: #b6220d;
-  --sgds-danger-600-rgb: 182, 34, 13;
-  --sgds-danger-700: #7e1809;
-  --sgds-danger-700-rgb: 126, 24, 9;
-  --sgds-danger-800: #4c0e05;
-  --sgds-danger-800-rgb: 76, 14, 5;
-  --sgds-danger-900: #270703;
-  --sgds-danger-900-rgb: 39, 7, 3;
+  --sgds-danger-600: #b90000;
+  --sgds-danger-700: #950000;
+  --sgds-danger-800: #720000;
+  --sgds-danger-900: #4f0000;
 }
 [data-bs-theme="dark"] {
-  --sgds-primary-bg-dark: #9182e8;
-  --sgds-primary-bg-dark-rgb: 145, 130, 232;
-  --sgds-secondary-bg-dark: #3d9da7;
-  --sgds-secondary-bg-dark-rgb: 61, 157, 167;
-  --sgds-success-bg-dark: #09a716;
-  --sgds-success-bg-dark-rgb: 9, 167, 22;
-  --sgds-info-bg-dark: #538cff;
-  --sgds-info-bg-dark-rgb: 83, 140, 255;
-  --sgds-warning-bg-dark: #b7874c;
-  --sgds-warning-bg-dark-rgb: 183, 135, 76;
-  --sgds-danger-bg-dark: #ef6447;
-  --sgds-danger-bg-dark-rgb: 239, 100, 71;
-  --sgds-light-bg-dark: #909090;
-  --sgds-light-bg-dark-rgb: 144, 144, 144;
-  --sgds-dark-bg-dark: #252525;
-  --sgds-dark-bg-dark-rgb: 37, 37, 37;
-  --sgds-primary-bg-hover-dark: #b3a8ef;
-  --sgds-secondary-bg-hover-dark: #5fc0c5;
-  --sgds-success-bg-hover-dark: #52c85b;
-  --sgds-info-bg-hover-dark: #8ab1ff;
-  --sgds-warning-bg-hover-dark: #cdac83;
-  --sgds-danger-bg-hover-dark: #fd957b;
-  --sgds-light-bg-hover-dark: #b1b1b1;
-  --sgds-dark-bg-hover-dark: #3f3f3f;
+  --sgds-primary: #9288f0;
+  --sgds-secondary: #5b9da9;
+  --sgds-success: #53a450;
+  --sgds-info: #5592ff;
+  --sgds-warning: #bc8a57;
+  --sgds-danger: #f06e57;
+  --sgds-light: #939393;
+  --sgds-dark: #252525;
   color-scheme: dark;
 }
-*,
-:after,
-:before {
-  box-sizing: border-box;
-}
-@media (prefers-reduced-motion: no-preference) {
-  :root {
-    scroll-behavior: smooth;
-  }
-}
-body {
+/* body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background-color: var(--sgds-body-bg);
@@ -340,4 +257,4 @@ body {
   line-height: var(--sgds-body-line-height);
   margin: 0;
   text-align: var(--sgds-body-text-align);
-}
+} */
