--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -1,6 +1,11 @@
 .home-card-container {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: stretch;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: stretch;
+}
+sgds-card.intro::part(base) {
+  border: none;
+  background-color: #f6f7fb;
+  border-radius: 24px;
 }
