--- a/src/components/FileUpload/sgds-file-upload.scss
+++ b/src/components/FileUpload/sgds-file-upload.scss
@@ -1,22 +1,27 @@
-:host{
-    --fileupload-left-icon-fill: green;
-    --fileupload-remove-icon-fill: red;
-    --fileupload-remove-icon-hover-fill: hsl(0, 100%, 40%);
+:host {
+  --fileupload-left-icon-fill: green;
+  --fileupload-remove-icon-fill: red;
+  --fileupload-remove-icon-hover-fill: hsl(0, 100%, 40%);
 }
 
-.fileupload-list-item span{
-    cursor: pointer;
-    &:first-of-type{
-        svg{
-            fill: var(--fileupload-left-icon-fill);
-        }
+.fileupload-list-item span {
+  cursor: pointer;
+  &:first-of-type {
+    svg {
+      fill: var(--fileupload-left-icon-fill);
     }
-    &:last-of-type{
-        svg{
-            fill: var(--fileupload-remove-icon-fill);
-            &:hover{
-                fill: var(--fileupload-remove-icon-hover-fill);
-            }
-        }
+  }
+  &:last-of-type {
+    svg {
+      fill: var(--fileupload-remove-icon-fill);
+      &:hover {
+        fill: var(--fileupload-remove-icon-hover-fill);
+      }
     }
+  }
+}
+.file-upload__label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
