--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -1,3 +1,4 @@
+/* For content related stylings */
 .home-card-container {
   display: grid;
   gap: 1rem;
@@ -8,4 +9,6 @@ sgds-card.intro::part(base) {
   border: none;
   background-color: #f6f7fb;
   border-radius: 24px;
+  height: 100%;
 }
+
