chore(*): remove Helvetica font

--- a/src/components/Masthead/sgds-masthead.scss
+++ b/src/components/Masthead/sgds-masthead.scss
@@ -1,7 +1,7 @@
 
 
 :host{
-    --masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+    --masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif;
     --masthead-text-color: hsl(0, 0%, 28%);
     --masthead-link-color: hsl(222, 63%, 50%);
     --masthead-link-color-hover: hsl(221, 64%, 55%);
