--- a/src/utils/components.style.scss
+++ b/src/utils/components.style.scss
@@ -359,7 +359,7 @@
   
     /* Fonts */
     --sl-font-mono: SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
-    --sl-font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+    --sl-font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif,
       'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     --sl-font-serif: Georgia, 'Times New Roman', serif;
   
